--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pojo-craft-frontend</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>LocalLink - Connect with Local Service Providers</title>
+    <meta name="description" content="LocalLink brings together customers and trusted local professionals. Find services, book appointments, and build your community." />
+    <meta name="author" content="LocalLink" />
 
-    <meta property="og:title" content="pojo-craft-frontend" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="LocalLink - Local Services Marketplace" />
+    <meta property="og:description" content="Connect with verified local service providers in your area" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
@@ -19,6 +19,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
